2003-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* doc/ptexinfmt.el (texinfo-discard-command-and-arg): New function
	for old Emacsen.

2003-07-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-linux-ja.el: New backend.

2003-07-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-decoder-alist): Simplified.

2003-07-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-decoder-alist): Look for the newest inflate command.

2003-07-09  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (w3m-mew-support-cid): Check `mew-version-number'.
	(mew-w3m-cid-retrieve): Support Mew 4.0.53 and later.
	Thanks to Kazu YAMAMOTO for his patch.

2003-07-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-uri-replace-alist): Add `rpm', `waei', `eiwa',
	`kokugo' and `eiei'.
	(w3m-input-url): Do not encode its return value.
	(w3m-goto-url): Call `w3m-url-transfer-encode-string' to encode a
	given URL.

2003-07-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.3.5 from emacs-w3m-1_3 branch.

2003-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-this-url-1): Simply copy buffer's contents to
	the new session rather than to call `w3m-goto-url'.

2003-07-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-local-file-type): Check whether a regular expression
	is specified, before matching it on a URL.

	* Following changes are to check whether required libraries are
	available.

	* w3mhack.el (toplevel): Do not create
	`shimbun/shimbun-servers.el' and `w3m-kwds.el' only when this file
	is loaded, to suppress excessive messages.
	(w3mhack-check-shimbun-servers-file): New function.
	(w3mhack-check-colon-keywords-file): New function.
	(w3mhack-compile): Call these functions explicitly.
	(w3mhack-batch-compile, w3mhack-locate-library,
	w3mhack-print-status): New functions.

	* configure.in: Check that egrep is available and that
	regexp-opt.el and xml.el are available.
